# ShopHub

./: .gitignore  ALL_CONFLICTS_RESOLVED_FINAL.txt  ALL_LOGICAL_FIXES_COMPLETE.txt  API_ENDPOINTS.md  BLOG_ABOUT_PAGES.md  BLOG_ABOUT_QUICK_START.md  BLOG_MANAGEMENT_SYSTEM.md  BLOG_QUICK_START.md  BUG_FIXES_AND_FEATURES.md  BUG_FIX_REPORT.md  CART_BUG_FIXED.md  CHECKLIST.md  CHECKOUT_COUPON_COMPLETE.md  CHECKOUT_COUPON_QUICK_START.md  CHECKOUT_IMPLEMENTATION_SUMMARY.md  COMPLETE_FEATURE_INDEX.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_FIXED.txt  COMPLETION_REPORT.md  DELIVERABLES_COMPLETE_LIST.md  DEPRECATION_WARNINGS_FIXED.txt  DESIGN_CHANGES.md  DOCUMENTATION_INDEX.md  EMAIL_SETUP_GUIDE.txt  FEATURES_UPDATE_COMPLETE.txt  FILES_INDEX.md  FINAL_ALL_ISSUES_FIXED.txt  FINAL_COMPLETE_FIX_SUMMARY.txt  FINAL_COMPLETION_SUMMARY.md  FINAL_FEATURES_VERIFICATION.md  FINAL_SHIPPING_TAX_FIX_COMPLETE.txt  FINAL_STATUS_ALL_FIXED.txt  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  FIXES_SUMMARY.md  FIX_COMPLETE.txt  GETTING_STARTED.md  GIT_MERGE_CONFLICTS_RESOLVED.txt  GOOGLE_OAUTH_FIX.md  (+60 more)
SepApp/: asgi.py  settings.py  urls.py  wsgi.py
docs/: ADMIN_GUIDE.md  DEVELOPER_GUIDE.md  OUTLINE.md  USER_GUIDE.md
ecommerce/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
ecommerce/migrations/: 0001_initial.py  0002_product_is_featured_product_original_price_and_more.py  (+10 more)
sent_emails/: README.txt
templates/: base.html
tests/: PROJECT_CHECKLIST.py  debug_coupon.py  main.py  populate_db.py  test_import.py  test_tax_system.py  verify_templates.py
(+23 files in other folders)
